--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 </head>
 <body data-gr-c-s-loaded="true">
 <div id="article">
-<h1>Hello!</h1>
+<h1>Hello! Welcome.</h1>
 <div>
+	<p>Belton Technologies is a Uganda-based award-winning digital studio that specializes in developing stunning custom Drupal websites. Our mission is to create unique, digital experiences for brands who are prepared to make an impact. Our collective experience ranges from design, digital media, digital marketing and SEO, to brand strategy and development.</p>
 <p>We are currently re-constructing our online shop!
-You can use our Facebook page: <a href="https://www.facebook.com/PapleRayn">Paple Rayn Uganda</a> for your online orders!</p>
+You can use our Facebook page: <a href="https://www.facebook.com/beltontechnologies">Belton Technologies</a> for your online help!</p>
 <p>Thank you!</p>
 </div>
 </div>
