--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		border-spacing: 0;
 	}
 
-      html {font-size: 16px; background-color: #000000;}
+      html {font-size: 16px; background-color: #0d004a;}
       body { text-align: center; padding: 150px; }
       h1 { font-size: 40px; font-weight: bold; margin-bottom: 1rem;}
       p {font-size: 1.5rem; margin-bottom: 1rem;}
