--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <div>
 <p>Belton Technologies is a Uganda-based award-winning digital studio that specializes in developing stunning custom Drupal websites. Our mission is to create unique, digital experiences for brands who are prepared to make an impact. </p>
 <p>Our collective experience ranges from design, digital media, digital marketing and SEO, to brand strategy and development.</p>
+<p>Don't be shy, Call or Whatsapp us on +256 754 498 630</p>
 <p>You can use our Facebook page: <a href="https://www.facebook.com/beltontechnologies">Belton Technologies</a> for your online help!</p>
 <p>Thank you!</p>
 </div>
